--- a/src/views/molecules/labelsList/labelsList.scss
+++ b/src/views/molecules/labelsList/labelsList.scss
@@ -4,15 +4,10 @@
   display: flex;
   width: 100%;
 
-
   .labels-list {
     display: flex;
     flex-flow: row wrap;
-    max-height: 4em;
     width: 100%;
-    overflow: hidden;
-    text-overflow: ellipsis;
-    overflow-wrap: break-word;
 
     .label-wrapper {
 
